src/app/main-content/landing-page/landing-page.component.scss
@import "./../../../styles.scss";

#landingPage {
  background-color: $lightBlue;
}

.contentMainComponent {
  flex: 1;
  justify-content: space-between;
  @include respond-to(tablet-landscape) {
    flex-direction: column;
    padding-top: 4.74dvh;
    min-height: 0;
  }
  @include respond-to(tablet-portrait) {
    gap: 41px;
    padding: 0;
  }
  @include respond-to(mobile-landscape) {
    padding-left: 7vw;
  }
  @media (max-width: 680px) and (max-height: 410px) {
    padding-top: 0;
  }
  @media (max-width: 560px) and (max-height: 410px) {
    padding-right: 0;
  }
}

.landingPageLeftSide {
  @include dFlex($ai: flex-start, $jc: space-between);
  flex-direction: column;
  height: 100%;
  padding-bottom: 8vh;
  box-sizing: border-box;
  @include respond-to(tablet-landscape) {
    height: auto;
    padding-bottom: 0;
    width: 100%;
  }
  @media (max-height: 800px) and (min-width: 1024px) {
    padding-bottom: 7dvh;
  }
  @include respond-to(tablet-portrait) {
    padding: 40px 16px 0 16px;
  }
  @media (max-width: 370px) {
    padding-top: 20px;
    @media (max-height: 650px) {
      padding-top: 0;
    }
  }
}

.headingsAndButton {
  @include dFlex($ai: flex-start);
  gap: clamp(18px, 3.56dvh, 3.56dvh);
  flex-direction: column;
}

.headings {
  @include dFlex($ai: flex-start);
  flex-direction: column;
  gap: clamp(4px, 1dvh, 8px);
}

.landingPageRightSide {
  height: 100%;
  margin-right: 3.17%;
  position: relative;
  flex: 1;
  @include dFlex($ai: flex-end);
  @media (max-width: 1420px) {
    margin-left: -15vw;
  }
  @include respond-to(tablet-landscape) {
    height: auto;
    width: 100%;
    justify-content: flex-end;
    margin-left: 0;
    margin-right: 0;
    min-height: 0;
  }
  @include respond-to(tablet) {
    justify-content: center;
  }
  @media (max-width: 768px) and (max-height: 750px) {
    justify-content: flex-end;
    margin-right: 60px;
  }
}

.hexagonAndImg {
  position: relative;
  @include dFlex($ai: flex-end);
  @include respond-to(tablet-landscape) {
    margin-right: 2vw;
  }
  @include respond-to(tablet) {
    margin-right: 0;
  }
  img {
    height: 82dvh;
    position: relative;
    @media (min-height: 700px) and (max-width: 1120px) {
      height: 70dvh;
    }
    @include respond-to(tablet-landscape) {
      max-height: 60vh;
    }
    @include respond-to(tablet) {
      height: 48dvh;
      @media (max-height: 650px) {
        height: 45dvh;
      }
    }
    @media (max-width: 680px) and (max-height: 410px) {
      max-height: 100%;
      height: 80dvh;
    }
    @media (max-width: 530px) and (max-height: 410px) {
      height: 72dvh;
    }
  }
  ::ng-deep app-hexagon {
    height: 68%;
    width: auto;
    aspect-ratio: 1 / 1;
    position: absolute;
    top: 0;
    right: -50px;
    @media (max-width: 1250px) and (min-height: 850px) {
      right: -30px;
    }
    @include respond-to(tablet-landscape) {
      right: -25px;
    }

    svg {
      position: absolute;
      top: 0;
      right: 0;
      width: 100%;
      height: 100%;
      transform: rotate(45deg);
      polygon {
        fill: $darkOrange;
        stroke: $darkOrange;
      }
    }
  }
}

